event align bug solved

--- a/src/app/modules/match/components/match-view/match-view.component.scss
+++ b/src/app/modules/match/components/match-view/match-view.component.scss
@@ -134,6 +134,7 @@
     float: left;
     color: bisque;
     text-align: left;
+    margin-bottom: 10px;
 }
 
 .away{
@@ -146,6 +147,7 @@
     float: right;
     color: bisque;
     text-align: right;
+    margin-bottom: 10px;
 }
 
 .event-icon{
